--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,33 @@
-# macOS
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
 .DS_Store
+*.pem
 
-# Python
-__pycache__/
-*.py[cod]
-.venv/
-venv/
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# Node / JavaScript
-node_modules/
-dist/
-build/
+# local env files
+.env*.local
 
-# General
-.env
-.env.*
+# vercel
+.vercel
 
-
+# typescript
+*.tsbuildinfo
+next-env.d.ts
